--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+         "dev": "concurrently \"php artisan serve\" \"npm --prefix shop-react start\""
     },
     "devDependencies": {
         "@babel/core": "^7.24.7",
@@ -13,6 +14,7 @@
         "axios": "^1.7.2",
         "babel-loader": "^9.1.3",
         "bootstrap": "^5.2.3",
+        "concurrently": "^8.2.2",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.2",
         "react": "^18.3.1",
